--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "kaiwaai",
-    "short_name": "kaiwaai",
+    "name": "unichat ai",
+    "short_name": "unichat ai",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
