--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: kaiwaai
+name: unichat_ai
 description: A new Flutter project.
 
 publish_to: 'none' 
@@ -16,6 +16,9 @@ dependencies:
   dart_openai: ^1.9.7
   flutter_chat_ui: ^1.6.6
   flutter_keyboard_visibility: ^5.0.2
+  firebase_core: ^2.15.1
+  firebase_auth: ^4.9.0
+  google_sign_in: ^6.1.5
 
 dev_dependencies:
   flutter_test:
