--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   firebase_auth: ^4.9.0
   google_sign_in: ^6.1.5
   flutter_signin_button: ^2.0.0
+  shared_preferences: ^2.0.7
 
 dev_dependencies:
   flutter_test:
