--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_signin_button: ^2.0.0
   shared_preferences: ^2.0.7
   flutter_inapp_purchase: ^5.4.2
+  flutter_tts: ^3.8.3
 
 dev_dependencies:
   flutter_test:
