--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@types/express": "^4.17.17",
+    "express": "^4.18.2",
     "firebase-functions": "^4.4.1",
     "lint": "^0.8.19"
   },
