--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_inapp_purchase: ^5.4.2
   flutter_tts: ^3.8.3
   cloud_functions: ^4.4.1
+  loading_animation_widget: ^1.2.0+4
 
 dev_dependencies:
   flutter_test:
