--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_tts: ^3.8.3
   cloud_functions: ^4.4.1
   loading_animation_widget: ^1.2.0+4
+  url_launcher: ^6.1.14
 
 dev_dependencies:
   flutter_test:
