--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -85,6 +85,7 @@ flutter {
 }
 
 dependencies {
+    implementation 'com.android.billingclient:billing:4.0.0'
     implementation platform('com.google.firebase:firebase-bom:32.2.3')
     implementation 'com.google.firebase:firebase-analytics'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
