--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none' 
 
-version: 1.0.0+3
+version: 1.0.0+4
 
 environment:
   sdk: '>=3.0.6 <4.0.0'
@@ -21,7 +21,7 @@ dependencies:
   google_sign_in: ^6.1.5
   flutter_signin_button: ^2.0.0
   shared_preferences: ^2.0.7
-  flutter_inapp_purchase: ^5.4.2
+  in_app_purchase: ^3.1.10
   flutter_tts: ^3.8.3
   cloud_functions: ^4.4.1
   loading_animation_widget: ^1.2.0+4
