--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "axios": "^1.5.1",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
     "google-auth-library": "^9.0.0"
