--- a/functions/package.json
+++ b/functions/package.json
@@ -18,7 +18,8 @@
     "axios": "^1.5.1",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
-    "google-auth-library": "^9.0.0"
+    "google-auth-library": "^9.0.0",
+    "googleapis": "^126.0.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
