--- a/functions/package.json
+++ b/functions/package.json
@@ -19,7 +19,8 @@
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
     "google-auth-library": "^9.0.0",
-    "googleapis": "^126.0.1"
+    "googleapis": "^126.0.1",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
