new release key and added to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,13 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/android/key.properties
 serviceaccount.env
 release-key.jks
 /functions/src/index.ts
+
+# Keystore files
+*.jks
+*.keystore
+
+/
