icons ACTUALLY fixed

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
     <application
         android:label="UniChat AI"
         android:name="${applicationName}"
-        android:icon="@drawable/unichaticon"
+        android:icon="@mipmap/unichaticon"
+        android:roundIcon="@mipmap/unichaticon"
         android:usesCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
